--- a/adminpanel.ui
+++ b/adminpanel.ui
@@ -21,14 +21,7 @@ QWidget {background-color: rgb(255, 255, 255)}
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="1">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="2" column="0">
-      <widget class="QPushButton" name="pushButton_3">
-       <property name="text">
-        <string>View Purchase Requests</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0">
+     <item row="5" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -57,6 +50,20 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
+     <item row="4" column="0">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>View Active Projects</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="text">
+        <string>View Purchase Requests</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="0">
       <spacer name="verticalSpacer_2">
        <property name="orientation">
@@ -70,10 +77,10 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </spacer>
      </item>
-     <item row="3" column="0">
-      <widget class="QPushButton" name="pushButton">
+     <item row="2" column="0">
+      <widget class="QPushButton" name="enrolUserButton">
        <property name="text">
-        <string>View Active Projects</string>
+        <string>Enrol User</string>
        </property>
       </widget>
      </item>
