--- a/enrol.ui
+++ b/enrol.ui
@@ -60,7 +60,14 @@ QWidget {background-color: white}
      <item row="2" column="0">
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="7" column="1">
-        <widget class="QLineEdit" name="lineEdit_2"/>
+        <widget class="QLineEdit" name="lineEdit_2">
+         <property name="maxLength">
+          <number>4</number>
+         </property>
+         <property name="echoMode">
+          <enum>QLineEdit::Password</enum>
+         </property>
+        </widget>
        </item>
        <item row="1" column="1">
         <widget class="QLineEdit" name="lineEdit"/>
