--- a/enrol.ui
+++ b/enrol.ui
@@ -60,7 +60,7 @@ QWidget {background-color: white}
      <item row="2" column="0">
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="7" column="1">
-        <widget class="QLineEdit" name="lineEdit_2">
+        <widget class="QLineEdit" name="pin">
          <property name="maxLength">
           <number>4</number>
          </property>
@@ -70,7 +70,7 @@ QWidget {background-color: white}
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QLineEdit" name="lineEdit"/>
+        <widget class="QLineEdit" name="userID"/>
        </item>
        <item row="7" column="0">
         <widget class="QLabel" name="label_2">
