--- a/cart.ui
+++ b/cart.ui
@@ -331,6 +331,11 @@ QWidget {background-color: white}
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>listView</tabstop>
+  <tabstop>removeCartButton</tabstop>
+  <tabstop>openInventory</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
