--- a/enrol.ui
+++ b/enrol.ui
@@ -59,52 +59,11 @@ QWidget {background-color: white}
      </item>
      <item row="2" column="0">
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="7" column="1">
-        <widget class="QLineEdit" name="pin">
-         <property name="maxLength">
-          <number>4</number>
-         </property>
-         <property name="echoMode">
-          <enum>QLineEdit::Password</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="userID"/>
-       </item>
-       <item row="7" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>PIN</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="label_7">
-         <property name="text">
-          <string>Phone (Calling)</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QLineEdit" name="phoneCall"/>
-       </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="label_8">
-         <property name="text">
-          <string>Phone (WhatsApp)</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_6">
-         <property name="text">
-          <string>Email</string>
-         </property>
-        </widget>
+       <item row="4" column="1">
+        <widget class="QLineEdit" name="roomNumber"/>
        </item>
        <item row="2" column="1">
-        <widget class="QLineEdit" name="email"/>
+        <widget class="QLineEdit" name="phoneCall"/>
        </item>
        <item row="0" column="1">
         <widget class="QLineEdit" name="name">
@@ -113,34 +72,14 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_9">
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_7">
          <property name="text">
-          <string>Name</string>
+          <string>Phone (Calling)</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
-        <widget class="QLineEdit" name="phoneWhatsApp"/>
-       </item>
-       <item row="5" column="0">
-        <widget class="QLabel" name="label_10">
-         <property name="text">
-          <string>Room Number</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1">
-        <widget class="QLineEdit" name="roomNumber"/>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>User ID</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="0" colspan="2">
+       <item row="5" column="0" colspan="2">
         <widget class="Line" name="line">
          <property name="minimumSize">
           <size>
@@ -153,6 +92,57 @@ QWidget {background-color: white}
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>Name</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLineEdit" name="phoneWhatsApp"/>
+       </item>
+       <item row="6" column="1">
+        <widget class="QLineEdit" name="pin">
+         <property name="maxLength">
+          <number>4</number>
+         </property>
+         <property name="echoMode">
+          <enum>QLineEdit::Password</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="email"/>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_8">
+         <property name="text">
+          <string>Phone (WhatsApp)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_10">
+         <property name="text">
+          <string>Room Number</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>PIN</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Email</string>
          </property>
         </widget>
        </item>
@@ -214,6 +204,14 @@ QWidget {background-color: white}
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>name</tabstop>
+  <tabstop>email</tabstop>
+  <tabstop>phoneCall</tabstop>
+  <tabstop>phoneWhatsApp</tabstop>
+  <tabstop>roomNumber</tabstop>
+  <tabstop>pin</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
