--- a/inventory.ui
+++ b/inventory.ui
@@ -383,6 +383,13 @@ QSpinBox::down-button { subcontrol-position: right; width: 40px; height: 35px;}<
    </layout>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>categoryView</tabstop>
+  <tabstop>itemListView</tabstop>
+  <tabstop>addToCartButton</tabstop>
+  <tabstop>cartButton</tabstop>
+  <tabstop>qtySpinBox</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
