--- a/about.ui
+++ b/about.ui
@@ -56,7 +56,7 @@ QWidget {background-color: white}
         <string notr="true">font: 18pt &quot;Noto Sans&quot;;</string>
        </property>
        <property name="text">
-        <string>Developed by Arnav Dhamija and Yashdeep Thorat</string>
+        <string>Developed by Arnav Dhamija, Yashdeep Thorat, Ebin Philip</string>
        </property>
       </widget>
      </item>
@@ -99,7 +99,7 @@ QWidget {background-color: white}
         <string notr="true">font: italic bold 18pt &quot;Noto Sans&quot;;</string>
        </property>
        <property name="text">
-        <string>v0.1a</string>
+        <string>v0.1.1a</string>
        </property>
       </widget>
      </item>
