--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>977</width>
-    <height>731</height>
+    <height>897</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -33,6 +33,16 @@
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout">
+      <item row="2" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="label_2">
+        <property name="styleSheet">
+         <string notr="true">font: 75 150pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>SIMS</string>
+        </property>
+       </widget>
+      </item>
       <item row="4" column="0">
        <spacer name="verticalSpacer_2">
         <property name="orientation">
@@ -46,41 +56,28 @@
         </property>
        </spacer>
       </item>
-      <item row="6" column="0">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
+      <item row="6" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QPushButton" name="pushButton">
+        <property name="minimumSize">
          <size>
-          <width>20</width>
-          <height>40</height>
+          <width>300</width>
+          <height>0</height>
          </size>
         </property>
-       </spacer>
-      </item>
-      <item row="2" column="0" alignment="Qt::AlignHCenter">
-       <widget class="QLabel" name="label_2">
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="styleSheet">
-         <string notr="true">font: 75 150pt &quot;Noto Sans&quot;;</string>
+         <string notr="true">padding: 10px
+</string>
         </property>
         <property name="text">
-         <string>SIMS</string>
+         <string>Login With Fingerprint</string>
         </property>
        </widget>
-      </item>
-      <item row="1" column="0">
-       <spacer name="verticalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label">
@@ -101,22 +98,18 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0" alignment="Qt::AlignHCenter">
-       <widget class="QPushButton" name="pushButton">
-        <property name="maximumSize">
+      <item row="9" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
          <size>
-          <width>400</width>
-          <height>16777215</height>
+          <width>20</width>
+          <height>40</height>
          </size>
         </property>
-        <property name="styleSheet">
-         <string notr="true">padding: 10px
-</string>
-        </property>
-        <property name="text">
-         <string>Continue</string>
-        </property>
-       </widget>
+       </spacer>
       </item>
       <item row="3" column="0" alignment="Qt::AlignHCenter">
        <widget class="QLabel" name="label_3">
@@ -128,9 +121,58 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="0">
+       <spacer name="verticalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="7" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QPushButton" name="pinButton">
+        <property name="minimumSize">
+         <size>
+          <width>300</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Login With PIN</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QLineEdit" name="pinBox">
+        <property name="minimumSize">
+         <size>
+          <width>300</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>400</width>
+          <height>16777215</height>
+         </size>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
+   <zorder>pushButton</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
