--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>977</width>
-    <height>897</height>
+    <height>691</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -36,7 +36,7 @@
       <item row="2" column="0" alignment="Qt::AlignHCenter">
        <widget class="QLabel" name="label_2">
         <property name="styleSheet">
-         <string notr="true">font: 75 150pt &quot;Noto Sans&quot;;</string>
+         <string notr="true">font: 75 100pt &quot;Noto Sans&quot;;</string>
         </property>
         <property name="text">
          <string>SIMS</string>
@@ -111,16 +111,6 @@
         </property>
        </spacer>
       </item>
-      <item row="3" column="0" alignment="Qt::AlignHCenter">
-       <widget class="QLabel" name="label_3">
-        <property name="styleSheet">
-         <string notr="true">font: 75 italic 24pt &quot;Noto Sans&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Smart Inventory Management System</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="0">
        <spacer name="verticalSpacer_3">
         <property name="orientation">
@@ -166,6 +156,16 @@
           <width>400</width>
           <height>16777215</height>
          </size>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="label_3">
+        <property name="styleSheet">
+         <string notr="true">font: 75 14pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>SMART INVENTORY MANAGEMENT SYSTEM</string>
         </property>
        </widget>
       </item>
