--- a/enrol.ui
+++ b/enrol.ui
@@ -51,6 +51,13 @@ QWidget {background-color: white}
       </widget>
      </item>
      <item row="4" column="0" alignment="Qt::AlignHCenter">
+      <widget class="QCheckBox" name="labAccess">
+       <property name="text">
+        <string>ARC Lab Access  </string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0" alignment="Qt::AlignHCenter">
       <widget class="QDialogButtonBox" name="buttonBox">
        <property name="standardButtons">
         <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
@@ -161,7 +168,7 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="3" column="0">
+     <item row="6" column="0">
       <spacer name="verticalSpacer_3">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -174,8 +181,28 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="5" column="0">
+     <item row="8" column="0">
       <spacer name="verticalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="5" column="0" alignment="Qt::AlignHCenter">
+      <widget class="QCheckBox" name="InventoryAccess">
+       <property name="text">
+        <string>Inventory Access</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
