--- a/enrol.ui
+++ b/enrol.ui
@@ -50,17 +50,10 @@ QWidget {background-color: white}
        </property>
       </widget>
      </item>
-     <item row="4" column="0" alignment="Qt::AlignHCenter">
+     <item row="5" column="0" alignment="Qt::AlignHCenter">
       <widget class="QCheckBox" name="labAccess">
        <property name="text">
         <string>ARC Lab Access  </string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0" alignment="Qt::AlignHCenter">
-      <widget class="QDialogButtonBox" name="buttonBox">
-       <property name="standardButtons">
-        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
        </property>
       </widget>
      </item>
@@ -155,6 +148,19 @@ QWidget {background-color: white}
        </item>
       </layout>
      </item>
+     <item row="9" column="0">
+      <spacer name="verticalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
      <item row="1" column="0">
       <spacer name="verticalSpacer_2">
        <property name="orientation">
@@ -168,7 +174,7 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="6" column="0">
+     <item row="7" column="0">
       <spacer name="verticalSpacer_3">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -181,20 +187,14 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="8" column="0">
-      <spacer name="verticalSpacer_4">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
+     <item row="8" column="0" alignment="Qt::AlignHCenter">
+      <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="standardButtons">
+        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
        </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
+      </widget>
      </item>
-     <item row="5" column="0" alignment="Qt::AlignHCenter">
+     <item row="6" column="0" alignment="Qt::AlignHCenter">
       <widget class="QCheckBox" name="inventoryAccess">
        <property name="text">
         <string>Inventory Access</string>
@@ -213,6 +213,13 @@ QWidget {background-color: white}
         </size>
        </property>
       </spacer>
+     </item>
+     <item row="4" column="0" alignment="Qt::AlignHCenter">
+      <widget class="QCheckBox" name="adminPriv">
+       <property name="text">
+        <string>Administrator    </string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
