--- a/enrol.ui
+++ b/enrol.ui
@@ -57,6 +57,20 @@ QWidget {background-color: white}
        </property>
       </widget>
      </item>
+     <item row="8" column="0">
+      <widget class="QPushButton" name="biometricButton">
+       <property name="text">
+        <string>Biometrics</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0" alignment="Qt::AlignHCenter">
+      <widget class="QCheckBox" name="adminPriv">
+       <property name="text">
+        <string>Administrator    </string>
+       </property>
+      </widget>
+     </item>
      <item row="2" column="0">
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="4" column="1">
@@ -148,7 +162,7 @@ QWidget {background-color: white}
        </item>
       </layout>
      </item>
-     <item row="9" column="0">
+     <item row="11" column="0">
       <spacer name="verticalSpacer_4">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -174,7 +188,7 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="7" column="0">
+     <item row="9" column="0">
       <spacer name="verticalSpacer_3">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -187,7 +201,7 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="8" column="0" alignment="Qt::AlignHCenter">
+     <item row="10" column="0" alignment="Qt::AlignHCenter">
       <widget class="QDialogButtonBox" name="buttonBox">
        <property name="standardButtons">
         <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
@@ -214,12 +228,18 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="4" column="0" alignment="Qt::AlignHCenter">
-      <widget class="QCheckBox" name="adminPriv">
-       <property name="text">
-        <string>Administrator    </string>
+     <item row="7" column="0">
+      <spacer name="verticalSpacer_5">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
        </property>
-      </widget>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
