--- a/enrol.ui
+++ b/enrol.ui
@@ -221,7 +221,7 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="4" column="0">
+     <item row="4" column="0" alignment="Qt::AlignHCenter">
       <widget class="QPushButton" name="biometricButton">
        <property name="text">
         <string>Biometrics</string>
