--- a/enrolfingerprint.ui
+++ b/enrolfingerprint.ui
@@ -114,7 +114,7 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
-     <item row="5" column="2" alignment="Qt::AlignHCenter">
+     <item row="5" column="2">
       <widget class="QPushButton" name="exitButton">
        <property name="text">
         <string>Exit</string>
