fixed touchscreen issues, back button

--- a/arc-header.ui
+++ b/arc-header.ui
@@ -35,6 +35,9 @@ QWidget {background-color: white}
          <height>50</height>
         </size>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -119,6 +122,12 @@ QWidget {background-color: white}
             <width>300</width>
             <height>16777215</height>
            </size>
+          </property>
+          <property name="mouseTracking">
+           <bool>false</bool>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::NoFocus</enum>
           </property>
          </widget>
         </item>
