--- a/adminpanel.ui
+++ b/adminpanel.ui
@@ -52,6 +52,9 @@ QWidget {background-color: rgb(255, 255, 255)}
      </item>
      <item row="4" column="0">
       <widget class="QPushButton" name="pushButton">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string>Edit Inventory</string>
        </property>
@@ -59,6 +62,9 @@ QWidget {background-color: rgb(255, 255, 255)}
      </item>
      <item row="3" column="0">
       <widget class="QPushButton" name="editUsersButton">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string>Edit Users</string>
        </property>
@@ -79,6 +85,9 @@ QWidget {background-color: rgb(255, 255, 255)}
      </item>
      <item row="2" column="0">
       <widget class="QPushButton" name="enrolUserButton">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string>Enrol User</string>
        </property>
